33279 - [BZ] Engine Defects found by "FindBugs"