@@ -69,9 +69,9 @@ public class PDFTextLM extends PDFLeafItemLM implements ITextLayoutManager
 	
 	static 
 	{
-		splitChar.add( new Character( ' ' ) );
-		splitChar.add( new Character( '\r') );
-		splitChar.add( new Character( '\n') );
+		splitChar.add( Character.valueOf( ' ' ) );
+		splitChar.add( Character.valueOf( '\r') );
+		splitChar.add( Character.valueOf( '\n') );
 	};
 	
 	public PDFTextLM( PDFLayoutEngineContext context, PDFStackingLM parent,
@@ -167,7 +167,7 @@ public class PDFTextLM extends PDFLeafItemLM implements ITextLayoutManager
 		char[] array = text.toCharArray( );
 		for ( int i = 0; i < array.length; i++ )
 		{
-			Character c = new Character( text.charAt( i ) );
+			Character c = Character.valueOf( text.charAt( i ) );
 			if ( splitChar.contains( c ) )
 				capitalizeNextChar = true;
 			else if (capitalizeNextChar)
