@@ -1127,7 +1127,7 @@ public class TableAreaLayout
 			int end = start + cell.getColSpan( );
 			for(int i=start; i<end; i++)
 			{
-				map.put( new Integer(start), new ClonedCellContent(cell, rowSpan) );
+				map.put( Integer.valueOf(start), new ClonedCellContent(cell, rowSpan) );
 			}
 		}
 		
@@ -1138,7 +1138,7 @@ public class TableAreaLayout
 		
 		public ICellContent getDropCellContent(int colId, IContent row)
 		{
-			ClonedCellContent dropCellContent =  (ClonedCellContent)map.get( new Integer(colId) );
+			ClonedCellContent dropCellContent =  (ClonedCellContent)map.get( Integer.valueOf(colId) );
 			if(dropCellContent!=null)
 			{
 				if(row!=rowContent &&  dropCellContent.getRowSpan( )>0 )
