@@ -35,67 +35,67 @@ public class StylePropertyMapping
 	
 	static
 	{
-		nameMapping.put( IStyleModel.FONT_FAMILY_PROP, new Integer( StyleConstants.STYLE_FONT_FAMILY ) );
-		nameMapping.put( IStyleModel.FONT_STYLE_PROP, new Integer( StyleConstants.STYLE_FONT_STYLE ) );
-		nameMapping.put( IStyleModel.FONT_VARIANT_PROP, new Integer( StyleConstants.STYLE_FONT_VARIANT ) );
-		nameMapping.put( IStyleModel.FONT_WEIGHT_PROP, new Integer( StyleConstants.STYLE_FONT_WEIGHT ) );
-		nameMapping.put( IStyleModel.FONT_SIZE_PROP, new Integer( StyleConstants.STYLE_FONT_SIZE ) );
-		nameMapping.put( IStyleModel.COLOR_PROP, new Integer( StyleConstants.STYLE_COLOR ) );
-		nameMapping.put( IStyleModel.BACKGROUND_COLOR_PROP, new Integer( StyleConstants.STYLE_BACKGROUND_COLOR ) );
-		nameMapping.put( IStyleModel.BACKGROUND_IMAGE_PROP, new Integer( StyleConstants.STYLE_BACKGROUND_IMAGE ) );
-		nameMapping.put( IStyleModel.BACKGROUND_REPEAT_PROP, new Integer( StyleConstants.STYLE_BACKGROUND_REPEAT ) );
-		nameMapping.put( IStyleModel.BACKGROUND_ATTACHMENT_PROP, new Integer( StyleConstants.STYLE_BACKGROUND_ATTACHMENT ) );
-		nameMapping.put( IStyleModel.BACKGROUND_POSITION_X_PROP, new Integer( StyleConstants.STYLE_BACKGROUND_POSITION_X ) );
-		nameMapping.put( IStyleModel.BACKGROUND_POSITION_Y_PROP, new Integer( StyleConstants.STYLE_BACKGROUND_POSITION_Y ) );
-		nameMapping.put( IStyleModel.WORD_SPACING_PROP, new Integer( StyleConstants.STYLE_WORD_SPACING ) );
-		nameMapping.put( IStyleModel.LETTER_SPACING_PROP, new Integer( StyleConstants.STYLE_LETTER_SPACING ) );
-		nameMapping.put( IStyleModel.TEXT_UNDERLINE_PROP, new Integer( StyleConstants.STYLE_TEXT_UNDERLINE ) );
-		nameMapping.put( IStyleModel.TEXT_OVERLINE_PROP, new Integer( StyleConstants.STYLE_TEXT_OVERLINE ) );
-		nameMapping.put( IStyleModel.TEXT_LINE_THROUGH_PROP, new Integer( StyleConstants.STYLE_TEXT_LINETHROUGH ) );
-		nameMapping.put( IStyleModel.VERTICAL_ALIGN_PROP, new Integer( StyleConstants.STYLE_VERTICAL_ALIGN ) );
-		nameMapping.put( IStyleModel.TEXT_TRANSFORM_PROP, new Integer( StyleConstants.STYLE_TEXT_TRANSFORM ) );
-		nameMapping.put( IStyleModel.TEXT_ALIGN_PROP, new Integer( StyleConstants.STYLE_TEXT_ALIGN ) );
-		nameMapping.put( IStyleModel.TEXT_INDENT_PROP, new Integer( StyleConstants.STYLE_TEXT_INDENT ) );
-		nameMapping.put( IStyleModel.LINE_HEIGHT_PROP, new Integer( StyleConstants.STYLE_LINE_HEIGHT ) );
-		nameMapping.put( IStyleModel.WHITE_SPACE_PROP, new Integer( StyleConstants.STYLE_WHITE_SPACE ) );
-		nameMapping.put( IStyleModel.MARGIN_TOP_PROP, new Integer( StyleConstants.STYLE_MARGIN_TOP ) );
-		nameMapping.put( IStyleModel.MARGIN_BOTTOM_PROP, new Integer( StyleConstants.STYLE_MARGIN_BOTTOM ) );
-		nameMapping.put( IStyleModel.MARGIN_LEFT_PROP, new Integer( StyleConstants.STYLE_MARGIN_LEFT ) );
-		nameMapping.put( IStyleModel.MARGIN_RIGHT_PROP, new Integer( StyleConstants.STYLE_MARGIN_RIGHT ) );
-		nameMapping.put( IStyleModel.PADDING_TOP_PROP, new Integer( StyleConstants.STYLE_PADDING_TOP ) );
-		nameMapping.put( IStyleModel.PADDING_BOTTOM_PROP, new Integer( StyleConstants.STYLE_PADDING_BOTTOM ) );
-		nameMapping.put( IStyleModel.PADDING_LEFT_PROP, new Integer( StyleConstants.STYLE_PADDING_LEFT ) );
-		nameMapping.put( IStyleModel.PADDING_RIGHT_PROP, new Integer( StyleConstants.STYLE_PADDING_RIGHT ) );
-		nameMapping.put( IStyleModel.BORDER_TOP_WIDTH_PROP, new Integer( StyleConstants.STYLE_BORDER_TOP_WIDTH ) );
-		nameMapping.put( IStyleModel.BORDER_BOTTOM_WIDTH_PROP, new Integer( StyleConstants.STYLE_BORDER_BOTTOM_WIDTH ) );
-		nameMapping.put( IStyleModel.BORDER_LEFT_WIDTH_PROP, new Integer( StyleConstants.STYLE_BORDER_LEFT_WIDTH ) );
-		nameMapping.put( IStyleModel.BORDER_RIGHT_WIDTH_PROP, new Integer( StyleConstants.STYLE_BORDER_RIGHT_WIDTH ) );
-		nameMapping.put( IStyleModel.BORDER_TOP_COLOR_PROP, new Integer( StyleConstants.STYLE_BORDER_TOP_COLOR ) );
-		nameMapping.put( IStyleModel.BORDER_BOTTOM_COLOR_PROP, new Integer( StyleConstants.STYLE_BORDER_BOTTOM_COLOR ) );
-		nameMapping.put( IStyleModel.BORDER_LEFT_COLOR_PROP, new Integer( StyleConstants.STYLE_BORDER_LEFT_COLOR ) );
-		nameMapping.put( IStyleModel.BORDER_RIGHT_COLOR_PROP, new Integer( StyleConstants.STYLE_BORDER_RIGHT_COLOR ) );
-		nameMapping.put( IStyleModel.BORDER_TOP_STYLE_PROP, new Integer( StyleConstants.STYLE_BORDER_TOP_STYLE ) );
-		nameMapping.put( IStyleModel.BORDER_BOTTOM_STYLE_PROP, new Integer( StyleConstants.STYLE_BORDER_BOTTOM_STYLE ) );
-		nameMapping.put( IStyleModel.BORDER_LEFT_STYLE_PROP, new Integer( StyleConstants.STYLE_BORDER_LEFT_STYLE ) );
-		nameMapping.put( IStyleModel.BORDER_RIGHT_STYLE_PROP, new Integer( StyleConstants.STYLE_BORDER_RIGHT_STYLE ) );
-		nameMapping.put( IStyleModel.DISPLAY_PROP, new Integer( StyleConstants.STYLE_DISPLAY ) );
-		nameMapping.put( IStyleModel.ORPHANS_PROP, new Integer( StyleConstants.STYLE_ORPHANS ) );
-		nameMapping.put( IStyleModel.WIDOWS_PROP, new Integer( StyleConstants.STYLE_WIDOWS ) );
-		nameMapping.put( IStyleModel.PAGE_BREAK_AFTER_PROP, new Integer( StyleConstants.STYLE_PAGE_BREAK_AFTER ) );
-		nameMapping.put( IStyleModel.PAGE_BREAK_BEFORE_PROP, new Integer( StyleConstants.STYLE_PAGE_BREAK_BEFORE ) );
-		nameMapping.put( IStyleModel.PAGE_BREAK_INSIDE_PROP, new Integer( StyleConstants.STYLE_PAGE_BREAK_INSIDE ) );
-		nameMapping.put( IStyleModel.MASTER_PAGE_PROP, new Integer( StyleConstants.STYLE_MASTER_PAGE ) );
-		nameMapping.put( IStyleModel.SHOW_IF_BLANK_PROP, new Integer( StyleConstants.STYLE_SHOW_IF_BLANK ) );
-		nameMapping.put( IStyleModel.CAN_SHRINK_PROP, new Integer( StyleConstants.STYLE_CAN_SHRINK ) );
+		nameMapping.put( IStyleModel.FONT_FAMILY_PROP, Integer.valueOf( StyleConstants.STYLE_FONT_FAMILY ) );
+		nameMapping.put( IStyleModel.FONT_STYLE_PROP, Integer.valueOf( StyleConstants.STYLE_FONT_STYLE ) );
+		nameMapping.put( IStyleModel.FONT_VARIANT_PROP, Integer.valueOf( StyleConstants.STYLE_FONT_VARIANT ) );
+		nameMapping.put( IStyleModel.FONT_WEIGHT_PROP, Integer.valueOf( StyleConstants.STYLE_FONT_WEIGHT ) );
+		nameMapping.put( IStyleModel.FONT_SIZE_PROP, Integer.valueOf( StyleConstants.STYLE_FONT_SIZE ) );
+		nameMapping.put( IStyleModel.COLOR_PROP, Integer.valueOf( StyleConstants.STYLE_COLOR ) );
+		nameMapping.put( IStyleModel.BACKGROUND_COLOR_PROP, Integer.valueOf( StyleConstants.STYLE_BACKGROUND_COLOR ) );
+		nameMapping.put( IStyleModel.BACKGROUND_IMAGE_PROP, Integer.valueOf( StyleConstants.STYLE_BACKGROUND_IMAGE ) );
+		nameMapping.put( IStyleModel.BACKGROUND_REPEAT_PROP, Integer.valueOf( StyleConstants.STYLE_BACKGROUND_REPEAT ) );
+		nameMapping.put( IStyleModel.BACKGROUND_ATTACHMENT_PROP, Integer.valueOf( StyleConstants.STYLE_BACKGROUND_ATTACHMENT ) );
+		nameMapping.put( IStyleModel.BACKGROUND_POSITION_X_PROP, Integer.valueOf( StyleConstants.STYLE_BACKGROUND_POSITION_X ) );
+		nameMapping.put( IStyleModel.BACKGROUND_POSITION_Y_PROP, Integer.valueOf( StyleConstants.STYLE_BACKGROUND_POSITION_Y ) );
+		nameMapping.put( IStyleModel.WORD_SPACING_PROP, Integer.valueOf( StyleConstants.STYLE_WORD_SPACING ) );
+		nameMapping.put( IStyleModel.LETTER_SPACING_PROP, Integer.valueOf( StyleConstants.STYLE_LETTER_SPACING ) );
+		nameMapping.put( IStyleModel.TEXT_UNDERLINE_PROP, Integer.valueOf( StyleConstants.STYLE_TEXT_UNDERLINE ) );
+		nameMapping.put( IStyleModel.TEXT_OVERLINE_PROP, Integer.valueOf( StyleConstants.STYLE_TEXT_OVERLINE ) );
+		nameMapping.put( IStyleModel.TEXT_LINE_THROUGH_PROP, Integer.valueOf( StyleConstants.STYLE_TEXT_LINETHROUGH ) );
+		nameMapping.put( IStyleModel.VERTICAL_ALIGN_PROP, Integer.valueOf( StyleConstants.STYLE_VERTICAL_ALIGN ) );
+		nameMapping.put( IStyleModel.TEXT_TRANSFORM_PROP, Integer.valueOf( StyleConstants.STYLE_TEXT_TRANSFORM ) );
+		nameMapping.put( IStyleModel.TEXT_ALIGN_PROP, Integer.valueOf( StyleConstants.STYLE_TEXT_ALIGN ) );
+		nameMapping.put( IStyleModel.TEXT_INDENT_PROP, Integer.valueOf( StyleConstants.STYLE_TEXT_INDENT ) );
+		nameMapping.put( IStyleModel.LINE_HEIGHT_PROP, Integer.valueOf( StyleConstants.STYLE_LINE_HEIGHT ) );
+		nameMapping.put( IStyleModel.WHITE_SPACE_PROP, Integer.valueOf( StyleConstants.STYLE_WHITE_SPACE ) );
+		nameMapping.put( IStyleModel.MARGIN_TOP_PROP, Integer.valueOf( StyleConstants.STYLE_MARGIN_TOP ) );
+		nameMapping.put( IStyleModel.MARGIN_BOTTOM_PROP, Integer.valueOf( StyleConstants.STYLE_MARGIN_BOTTOM ) );
+		nameMapping.put( IStyleModel.MARGIN_LEFT_PROP, Integer.valueOf( StyleConstants.STYLE_MARGIN_LEFT ) );
+		nameMapping.put( IStyleModel.MARGIN_RIGHT_PROP, Integer.valueOf( StyleConstants.STYLE_MARGIN_RIGHT ) );
+		nameMapping.put( IStyleModel.PADDING_TOP_PROP, Integer.valueOf( StyleConstants.STYLE_PADDING_TOP ) );
+		nameMapping.put( IStyleModel.PADDING_BOTTOM_PROP, Integer.valueOf( StyleConstants.STYLE_PADDING_BOTTOM ) );
+		nameMapping.put( IStyleModel.PADDING_LEFT_PROP, Integer.valueOf( StyleConstants.STYLE_PADDING_LEFT ) );
+		nameMapping.put( IStyleModel.PADDING_RIGHT_PROP, Integer.valueOf( StyleConstants.STYLE_PADDING_RIGHT ) );
+		nameMapping.put( IStyleModel.BORDER_TOP_WIDTH_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_TOP_WIDTH ) );
+		nameMapping.put( IStyleModel.BORDER_BOTTOM_WIDTH_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_BOTTOM_WIDTH ) );
+		nameMapping.put( IStyleModel.BORDER_LEFT_WIDTH_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_LEFT_WIDTH ) );
+		nameMapping.put( IStyleModel.BORDER_RIGHT_WIDTH_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_RIGHT_WIDTH ) );
+		nameMapping.put( IStyleModel.BORDER_TOP_COLOR_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_TOP_COLOR ) );
+		nameMapping.put( IStyleModel.BORDER_BOTTOM_COLOR_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_BOTTOM_COLOR ) );
+		nameMapping.put( IStyleModel.BORDER_LEFT_COLOR_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_LEFT_COLOR ) );
+		nameMapping.put( IStyleModel.BORDER_RIGHT_COLOR_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_RIGHT_COLOR ) );
+		nameMapping.put( IStyleModel.BORDER_TOP_STYLE_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_TOP_STYLE ) );
+		nameMapping.put( IStyleModel.BORDER_BOTTOM_STYLE_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_BOTTOM_STYLE ) );
+		nameMapping.put( IStyleModel.BORDER_LEFT_STYLE_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_LEFT_STYLE ) );
+		nameMapping.put( IStyleModel.BORDER_RIGHT_STYLE_PROP, Integer.valueOf( StyleConstants.STYLE_BORDER_RIGHT_STYLE ) );
+		nameMapping.put( IStyleModel.DISPLAY_PROP, Integer.valueOf( StyleConstants.STYLE_DISPLAY ) );
+		nameMapping.put( IStyleModel.ORPHANS_PROP, Integer.valueOf( StyleConstants.STYLE_ORPHANS ) );
+		nameMapping.put( IStyleModel.WIDOWS_PROP, Integer.valueOf( StyleConstants.STYLE_WIDOWS ) );
+		nameMapping.put( IStyleModel.PAGE_BREAK_AFTER_PROP, Integer.valueOf( StyleConstants.STYLE_PAGE_BREAK_AFTER ) );
+		nameMapping.put( IStyleModel.PAGE_BREAK_BEFORE_PROP, Integer.valueOf( StyleConstants.STYLE_PAGE_BREAK_BEFORE ) );
+		nameMapping.put( IStyleModel.PAGE_BREAK_INSIDE_PROP, Integer.valueOf( StyleConstants.STYLE_PAGE_BREAK_INSIDE ) );
+		nameMapping.put( IStyleModel.MASTER_PAGE_PROP, Integer.valueOf( StyleConstants.STYLE_MASTER_PAGE ) );
+		nameMapping.put( IStyleModel.SHOW_IF_BLANK_PROP, Integer.valueOf( StyleConstants.STYLE_SHOW_IF_BLANK ) );
+		nameMapping.put( IStyleModel.CAN_SHRINK_PROP, Integer.valueOf( StyleConstants.STYLE_CAN_SHRINK ) );
 		/*
-		nameMapping.put( IStyleModel.NUMBER_FORMAT_PROP, new Integer( StyleConstants.STYLE_NUMBER_FORMAT ) );
-		nameMapping.put( IStyleModel.STRING_FORMAT_PROP, new Integer( StyleConstants.STYLE_STRING_FORMAT ) );
-		nameMapping.put( IStyleModel.DATE_TIME_FORMAT_PROP, new Integer( StyleConstants.STYLE_DATE_FORMAT ) );
+		nameMapping.put( IStyleModel.NUMBER_FORMAT_PROP, Integer.valueOf( StyleConstants.STYLE_NUMBER_FORMAT ) );
+		nameMapping.put( IStyleModel.STRING_FORMAT_PROP, Integer.valueOf( StyleConstants.STYLE_STRING_FORMAT ) );
+		nameMapping.put( IStyleModel.DATE_TIME_FORMAT_PROP, Integer.valueOf( StyleConstants.STYLE_DATE_FORMAT ) );
 		*/
-		nameMapping.put( IStyleModel.NUMBER_ALIGN_PROP, new Integer( StyleConstants.STYLE_NUMBER_ALIGN ) );
+		nameMapping.put( IStyleModel.NUMBER_ALIGN_PROP, Integer.valueOf( StyleConstants.STYLE_NUMBER_ALIGN ) );
 
 		// bidi_hcg: Add Bidi text direction.
-		nameMapping.put( IStyleModel.TEXT_DIRECTION_PROP, new Integer(
+		nameMapping.put( IStyleModel.TEXT_DIRECTION_PROP, Integer.valueOf(
 				StyleConstants.STYLE_DIRECTION ) );
 		nameMapping.put( BIRTConstants.BIRT_STYLE_DATA_FORMAT, StyleConstants.STYLE_DATA_FORMAT );
 	}
@@ -167,7 +167,7 @@ public class StylePropertyMapping
 
 	public static Object getDefaultValue( int index )
 	{
-		return getDefaultValue( nameMapping.get( new Integer( index ) ).toString( ) );
+		return getDefaultValue( nameMapping.get( Integer.valueOf( index ) ).toString( ) );
 	}
 
 	public static int getPropertyID( String name )
