@@ -228,7 +228,7 @@ public class ReportDocumentBuilder
 		IReportExecutor executor = executionContext.getExecutor( );
 		engine = LayoutEngineFactory
 				.createLayoutEngine( ExtensionManager.PAGE_BREAK_PAGINATION );
-		engine.setOption( EngineTask.TASK_TYPE, new Integer(
+		engine.setOption( EngineTask.TASK_TYPE, Integer.valueOf(
 				IEngineTask.TASK_RUN ) );
 
 		IReportContent report = executor.execute( );
